syntax = "proto3";

option java_multiple_files = true;
option java_package = "doctor.grpc";

service Doctor {
  rpc loginDoctor (GetDoctorByIdRequest) returns (LoginDoctorResponse) {}
  rpc changePassword (ChangePasswordRequest) returns (UniResponse){}
  rpc getDoctorById(GetDoctorByIdRequest) returns (GetDoctorByIdResponse){}
}


message GetDoctorByIdRequest{
  string id = 1;
}
message UniResponse{
  string info = 1;
}

message GetDoctorByIdResponse{
  string firstname = 1;
  string lastname = 2;
  string specialisation = 3;
}

message ChangePasswordRequest{
  string id = 1;
  string newPassword = 2;
}

message LoginDoctorResponse {
  string name = 1;
  string surname = 2;
  string specialisation = 3;
  string id = 4;
  string password = 5;
}