syntax = "proto3";

option java_multiple_files = true;
option java_package = "patient.grpc";

service Patient {
  rpc createAppointment (CreateAppointment) returns (DBresponse) {}
  rpc loginPatient (PatientRequest) returns (LoginResponse) {}
  rpc registerPatient (RegisterRequest) returns (DBresponse) {}
  rpc getCities(GetCities) returns (CityListResponse);
  rpc getClinics(CityRequest) returns (ClinicListResponse){}
  rpc getDoctors(Clinic) returns (DoctorListResponse){}
}
message CreateAppointment {
  string type = 1;
  string description = 2;
  string status = 3;
  string patientCpr = 4;
  string doctorId = 5;
  string appointmentDate = 6;
  string appointmentTime = 7;
}

message CityRequest {
  string name =1;
  string postalcode= 2;
}

message CityListResponse {
  repeated CityRequest cities = 1;
}

message ClinicListResponse {
  repeated Clinic clinics= 1;
}

message Clinic {
  string id =1;
  string name=2;
  string address=3;
}


message GetCities {
  string request = 1;
}

message DoctorRequest {
  string id=1;
  string firstname =2;
  string lastname =3;
  string specialisation =4;
}

message DoctorListResponse {
  repeated DoctorRequest doctor= 1;
}

message DBresponse {
  string confirmation = 1;
}

message RegisterRequest {
  string name = 1;
  string surname = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
  string CPRNo = 6;
}

message PatientRequest {
  string cpr = 1;
}

message LoginResponse {
  string name = 1;
  string surname = 2;
  string email = 3;
  string phone = 4;
  string cpr = 5;
  string password = 6;
}